// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiBadge is disabled 1`] = `
<span
  aria-label="aria-label"
  class="euiBadge euiBadge-isDisabled euiBadge--iconLeft testClass1 testClass2"
  data-test-subj="test subject string"
  style="background-color:#D3DAE6;color:#000000"
>
  <span
    class="euiBadge__content"
  >
    <span
      class="euiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`EuiBadge is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiBadge euiBadge--iconLeft testClass1 testClass2"
  data-test-subj="test subject string"
  style="background-color:#D3DAE6;color:#000000"
>
  <span
    class="euiBadge__content"
  >
    <span
      class="euiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`EuiBadge is rendered with iconOnClick and onClick provided 1`] = `
<span
  class="euiBadge euiBadge--iconLeft euiBadge--default testClass1 testClass2"
>
  <span
    class="euiBadge__content"
  >
    <button
      aria-label="aria-label"
      class="euiBadge__childButton"
      color="default"
      data-test-subj="test subject string"
    >
      Content
    </button>
  </span>
</span>
`;

exports[`EuiBadge is rendered with iconOnClick provided 1`] = `
<span
  aria-label="aria-label"
  class="euiBadge euiBadge--iconLeft euiBadge--default testClass1 testClass2"
  data-test-subj="test subject string"
>
  <span
    class="euiBadge__content"
  >
    <span
      class="euiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`EuiBadge is rendered with onClick provided 1`] = `
<button
  aria-label="aria-label"
  class="euiBadge euiBadge-isClickable euiBadge--iconLeft euiBadge--default testClass1 testClass2"
  data-test-subj="test subject string"
>
  <span
    class="euiBadge__content"
  >
    <span
      class="euiBadge__text"
    >
      Content
    </span>
  </span>
</button>
`;

exports[`EuiBadge props color accent is rendered 1`] = `
<span
  class="euiBadge euiBadge--iconLeft"
  style="background-color:#ff6bb1;color:#6f0021"
>
  <span
    class="euiBadge__content"
  >
    <span
      class="euiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`EuiBadge props color danger is rendered 1`] = `
<span
  class="euiBadge euiBadge--iconLeft"
  style="background-color:#ff654e;color:#530000"
>
  <span
    class="euiBadge__content"
  >
    <span
      class="euiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`EuiBadge props color default is rendered 1`] = `
<span
  class="euiBadge euiBadge--iconLeft"
  style="background-color:#D3DAE6;color:#000000"
>
  <span
    class="euiBadge__content"
  >
    <span
      class="euiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`EuiBadge props color primary is rendered 1`] = `
<span
  class="euiBadge euiBadge--iconLeft"
  style="background-color:#62a3f2;color:#001c56"
>
  <span
    class="euiBadge__content"
  >
    <span
      class="euiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`EuiBadge props color secondary is rendered 1`] = `
<span
  class="euiBadge euiBadge--iconLeft"
  style="background-color:#5abcb0;color:#002720"
>
  <span
    class="euiBadge__content"
  >
    <span
      class="euiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`EuiBadge props color warning is rendered 1`] = `
<span
  class="euiBadge euiBadge--iconLeft"
  style="background-color:#F5A700;color:#000000"
>
  <span
    class="euiBadge__content"
  >
    <span
      class="euiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`EuiBadge props iconSide left is rendered 1`] = `
<span
  class="euiBadge euiBadge--iconLeft"
  style="background-color:#D3DAE6;color:#000000"
>
  <span
    class="euiBadge__content"
  >
    <span
      class="euiBadge__text"
    >
      Content
    </span>
    <svg
      aria-hidden="true"
      class="euiIcon euiIcon--small euiIcon-isLoading euiBadge__icon"
      focusable="false"
      height="16"
      role="img"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    />
  </span>
</span>
`;

exports[`EuiBadge props iconSide right is rendered 1`] = `
<span
  class="euiBadge euiBadge--iconRight"
  style="background-color:#D3DAE6;color:#000000"
>
  <span
    class="euiBadge__content"
  >
    <span
      class="euiBadge__text"
    >
      Content
    </span>
    <svg
      aria-hidden="true"
      class="euiIcon euiIcon--small euiIcon-isLoading euiBadge__icon"
      focusable="false"
      height="16"
      role="img"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    />
  </span>
</span>
`;

exports[`EuiBadge props iconType is rendered 1`] = `
<span
  class="euiBadge euiBadge--iconLeft"
  style="background-color:#D3DAE6;color:#000000"
>
  <span
    class="euiBadge__content"
  >
    <span
      class="euiBadge__text"
    >
      Content
    </span>
    <svg
      aria-hidden="true"
      class="euiIcon euiIcon--small euiIcon-isLoading euiBadge__icon"
      focusable="false"
      height="16"
      role="img"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    />
  </span>
</span>
`;
